tests/baselines/reference/parserConstructorDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration8.ts(3,3): error TS2390: Constructor implementation is missing.
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration8.ts(3,21): error TS1005: '(' expected.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration8.ts (2 errors) ====
    class C {
      // Not a constructor
      public constructor;
      ~~~~~~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
                        ~
!!! error TS1005: '(' expected.
    }